<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2024-2025 FortuneOS
     SPDX-License-Identifier: Apache-2.0
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Fortune Craft -->
    <string name="craft_title">Fortune Craft</string>
    <string name="craft_footer">These features are experimental.</string>
    <string name="craft_summary">Experimental features</string>

    <!-- Category -->
    <string name="craft_status_bar_category">Status bar</string>
    <string name="craft_misc_category">Misc</string>

    <!-- Statusbar network traffic monitor -->
    <string name="network_traffic_state_title">Network traffic display</string>
    <string name="network_traffic_state_summary">Showing on</string>
    <string name="network_traffic_location_title">Network traffic location</string>
    <string name="traffic_statusbar">Statusbar</string>
    <string name="traffic_expanded_statusbar">Expanded QS header</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold</string>
    <string name="network_traffic_limit_mb_title">Threshold in MB/s</string>
    <string name="network_traffic_limit_mb_summary_on">Set the threshold in MB/s</string>
    <string name="network_traffic_limit_mb_summary_off">Set the threshold in KB/s</string>
    <string name="network_traffic_arrow_title">Show arrows</string>
    <string name="network_traffic_arrow_summary">Show the network traffic indicator arrows</string>
    <string name="network_traffic_type">Select net activity type</string>
    <string name="show_network_traffic_combined">Combined (Upload + Download)</string>
    <string name="show_network_traffic_dynamic">Dynamic</string>
    <string name="show_network_traffic_up">Upload</string>
    <string name="show_network_traffic_down">Download</string>
    <string name="show_network_traffic_all">Both</string>
    <string name="network_traffic_font_size_title">Single net font size</string>
    <string name="unit_kbps">KB/s</string>
    <string name="unit_mbps">MB/s</string>

    <!-- Status bar Icon Manager -->
    <string name="icon_manager_title">Status bar icons</string>
    <string name="icon_manager_summary">Control visibility of status bar icons</string>

    <!-- Double tap to sleep on status bar or lockscreen -->
    <string name="status_bar_double_tap_to_sleep_title">Tap to sleep</string>
    <string name="status_bar_double_tap_to_sleep_summary">Double-tap on the status bar or lockscreen to turn off the display</string>

    <!-- Global Actions -->
    <string name="global_actions_advanced_reboot_title">Enable advanced restart</string>
    <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader in power menu</string>

    <!-- Ignore window secure -->
    <string name="ignore_window_secure_title">Ignore window secure flags</string>
    <string name="ignore_window_secure_summary">This removes the screenshots and screenrecords limits for all applications. Normally, special applications are replaced with black areas in records. This can be convenient in some cases but may lead to privacy leaks. After changing this toggle, you may need to restart applications for the change to take effect.</string>
</resources>
